big refactoring, harmonization, and additional tests